Bug 235335. Make nsFrameManager a direct member of nsIPresShell. r+sr=bryner